--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="floating-card" style="left: 0; top: 0;">
+                <div class="floating-card" style="left: 0%; top: 5%;">
                     <div class="card-content">
                         <i class="fas fa-code"></i>
                         <h3>Web Development</h3>
                         <p>Modern & Responsive</p>
                     </div>
                 </div>
-                <div class="floating-card" style="left: 60%; top: 10%;">
+                <div class="floating-card" style="left: 50%; top: 10%;">
                     <div class="card-content">
                         <i class="fas fa-mobile-alt"></i>
                         <h3>Automation</h3>
                         <p>Cross-platform</p>
                     </div>
                 </div>
-                <div class="floating-card" style="left: 30%; top: 60%;">
+                <div class="floating-card" style="left: 0%; top: 65%;">
                     <div class="card-content">
                         <i class="fas fa-mobile-alt"></i>
                         <h3>Game Development</h3>
                         <p>Made with Passion</p>
                     </div>
                 </div>
-                <div class="floating-card" style="left: 70%; top: 50%;">
+                <div class="floating-card" style="left: 55%; top: 55%;">
                     <div class="card-content">
                         <i class="fas fa-paint-brush"></i>
                         <h3>UI/UX Design</h3>
@@ -159,7 +159,7 @@
                 <div class="project-card">
                     <div class="project-image">
                         <div class="image-placeholder">
-                            <i class="fas fa-mobile-alt"></i>
+                            <img src="images/Automated-Record.png" alt="Automated Report Generation System" class="project-image">
                         </div>
                     </div>
                     <div class="project-content">
@@ -202,7 +202,7 @@
                 <div class="project-card">
                     <div class="project-image">
                         <div class="image-placeholder">
-                            <i class="fas fa-chart-line"></i>
+                            <img src="images/BookHavenDashboard.png" alt="Bookkeeping System" class="project-image">
                         </div>
                     </div>
                     <div class="project-content">
